--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -25,9 +25,7 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
-      LispVal
-      Parser
+      Snail.Lexer
   other-modules:
       Paths_snailscheme
   hs-source-dirs:
@@ -35,11 +33,12 @@ library
   default-extensions:
       ImportQualifiedPost
       OverloadedStrings
+      TypeApplications
   build-depends:
       base >=4.7 && <5
     , containers
+    , megaparsec
     , mtl
-    , parsec
     , text
   default-language: Haskell2010
 
@@ -52,12 +51,13 @@ executable snailscheme-exe
   default-extensions:
       ImportQualifiedPost
       OverloadedStrings
+      TypeApplications
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers
+    , megaparsec
     , mtl
-    , parsec
     , snailscheme
     , text
   default-language: Haskell2010
@@ -66,19 +66,24 @@ test-suite snailscheme-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Property
+      Snail.LexerSpec
       Paths_snailscheme
   hs-source-dirs:
       test
   default-extensions:
       ImportQualifiedPost
       OverloadedStrings
+      TypeApplications
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , containers
     , hspec
+    , hspec-discover
+    , megaparsec
     , mtl
-    , parsec
     , snailscheme
     , text
   default-language: Haskell2010
