Implement megaparsec lexer for reference implementation

--- a/package.yaml
+++ b/package.yaml
@@ -22,7 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - text
-- parsec
+- megaparsec
 - mtl
 - containers
 - directory
@@ -31,6 +31,7 @@ dependencies:
 default-extensions:
 - ImportQualifiedPost
 - OverloadedStrings
+- TypeApplications
 
 library:
   source-dirs: src
@@ -57,3 +58,5 @@ tests:
     dependencies:
     - snailscheme
     - hspec
+    - hspec-discover
+    - QuickCheck
