--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -26,11 +26,11 @@ source-repository head
 library
   exposed-modules:
       Evaluation
-      Lib
       LispVal
       Parser
       Prim
       Repl
+      Snail.Lexer
   other-modules:
       Paths_snailscheme
   hs-source-dirs:
@@ -38,13 +38,14 @@ library
   default-extensions:
       ImportQualifiedPost
       OverloadedStrings
+      TypeApplications
   build-depends:
       base >=4.7 && <5
     , containers
     , directory
     , haskeline
+    , megaparsec
     , mtl
-    , parsec
     , text
   default-language: Haskell2010
 
@@ -57,14 +58,15 @@ executable snailscheme-exe
   default-extensions:
       ImportQualifiedPost
       OverloadedStrings
+      TypeApplications
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers
     , directory
     , haskeline
+    , megaparsec
     , mtl
-    , parsec
     , snailscheme
     , text
   default-language: Haskell2010
@@ -73,21 +75,26 @@ test-suite snailscheme-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Property
+      Snail.LexerSpec
       Paths_snailscheme
   hs-source-dirs:
       test
   default-extensions:
       ImportQualifiedPost
       OverloadedStrings
+      TypeApplications
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , containers
     , directory
     , haskeline
     , hspec
+    , hspec-discover
+    , megaparsec
     , mtl
-    , parsec
     , snailscheme
     , text
   default-language: Haskell2010
