--- a/package.yaml
+++ b/package.yaml
@@ -25,11 +25,14 @@ dependencies:
 - megaparsec
 - mtl
 - containers
+- vector
+- text-display
 
 default-extensions:
 - ImportQualifiedPost
 - OverloadedStrings
 - TypeApplications
+- LambdaCase
 
 library:
   source-dirs: src
