--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Snail.Lexer
+      Snail.Types
   other-modules:
       Paths_snailscheme
   hs-source-dirs:
@@ -34,12 +35,15 @@ library
       ImportQualifiedPost
       OverloadedStrings
       TypeApplications
+      LambdaCase
   build-depends:
       base >=4.7 && <5
     , containers
     , megaparsec
     , mtl
     , text
+    , text-display
+    , vector
   default-language: Haskell2010
 
 executable snailscheme-exe
@@ -52,6 +56,7 @@ executable snailscheme-exe
       ImportQualifiedPost
       OverloadedStrings
       TypeApplications
+      LambdaCase
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
@@ -60,6 +65,8 @@ executable snailscheme-exe
     , mtl
     , snailscheme
     , text
+    , text-display
+    , vector
   default-language: Haskell2010
 
 test-suite snailscheme-test
@@ -75,6 +82,7 @@ test-suite snailscheme-test
       ImportQualifiedPost
       OverloadedStrings
       TypeApplications
+      LambdaCase
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       QuickCheck
@@ -86,4 +94,6 @@ test-suite snailscheme-test
     , mtl
     , snailscheme
     , text
+    , text-display
+    , vector
   default-language: Haskell2010
