Don't even need to install stack

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,4 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: Install stack
-        run: wget -qO- https://get.haskellstack.org | sh
-      - name: Test
-        run: stack test
+      - run: stack test
