--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,4 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: Install stack
-        uses: sudo apt install stack
-      - name: Test
-        uses: stack test
+      - run: stack test
