--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,10 @@
 name: CI
-on: [pull_request, push]
+on:
+  push:
+    branches:
+    - master
+    - referenceImplementation
+  pull_request:
 jobs:
   test:
     runs-on: ubuntu-latest
