--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,5 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Run tests
         run: stack test
+      - name: Install fourmolu
+        run: stack install fourmolu
       - name: Check formatting
         run: make format-check
