--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -29,6 +29,8 @@ library
       Lib
       LispVal
       Parser
+      Prim
+      Repl
   other-modules:
       Paths_snailscheme
   hs-source-dirs:
@@ -40,6 +42,7 @@ library
       base >=4.7 && <5
     , containers
     , directory
+    , haskeline
     , mtl
     , parsec
     , text
@@ -59,6 +62,7 @@ executable snailscheme-exe
       base >=4.7 && <5
     , containers
     , directory
+    , haskeline
     , mtl
     , parsec
     , snailscheme
@@ -80,6 +84,7 @@ test-suite snailscheme-test
       base >=4.7 && <5
     , containers
     , directory
+    , haskeline
     , hspec
     , mtl
     , parsec
