--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -41,6 +41,7 @@ library
     , containers
     , megaparsec
     , mtl
+    , parser-combinators
     , text
     , text-display
   default-language: Haskell2010
@@ -61,6 +62,7 @@ executable snailscheme-exe
     , containers
     , megaparsec
     , mtl
+    , parser-combinators
     , snailscheme
     , text
     , text-display
@@ -72,6 +74,7 @@ test-suite snailscheme-test
   other-modules:
       Property
       Snail.LexerSpec
+      Snail.ParserSpec
       Paths_snailscheme
   hs-source-dirs:
       test
@@ -88,6 +91,7 @@ test-suite snailscheme-test
     , hspec-discover
     , megaparsec
     , mtl
+    , parser-combinators
     , snailscheme
     , text
     , text-display
