--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Install Nix
         uses: cachix/install-nix-action@v16
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Check formatting
         run: nix-shell -p haskellPackages.fourmolu --command 'make format-check'
