--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,8 +22,13 @@ jobs:
       - name: Run tests
         run: stack test
 
-      - name: Install fourmolu
-        run: stack install fourmolu
+      - name: Install Nix
+        uses: cachix/install-nix-action@v16
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Check formatting
-        run: make format-check
+        run: nix-shell -p haskellPackages.fourmolu --command 'make format-check'
+
+      - name: Check hints
+        run: nix-shell -p haskellPackages.hlint --command 'make hlint'
