--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Snail.Characters
       Snail.Lexer
       Snail.Types
   other-modules:
