--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Snail.Characters
+      Snail.IO
       Snail.Lexer
       Snail.Types
   other-modules:
@@ -71,6 +72,7 @@ test-suite snailscheme-test
   main-is: Spec.hs
   other-modules:
       Property
+      Snail.IOSpec
       Snail.LexerSpec
       Paths_snailscheme
   hs-source-dirs:
