--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -42,6 +42,7 @@ library
     , containers
     , megaparsec
     , mtl
+    , raw-strings-qq
     , text
     , text-display
   default-language: Haskell2010
@@ -62,6 +63,7 @@ executable snailscheme-exe
     , containers
     , megaparsec
     , mtl
+    , raw-strings-qq
     , snailscheme
     , text
     , text-display
@@ -90,6 +92,7 @@ test-suite snailscheme-test
     , hspec-discover
     , megaparsec
     , mtl
+    , raw-strings-qq
     , snailscheme
     , text
     , text-display
