Port Lexer fixes, add operator token for now

--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -73,6 +73,7 @@ test-suite snailscheme-test
   main-is: Spec.hs
   other-modules:
       Property
+      Snail.ASTSpec
       Snail.IOSpec
       Snail.LexerSpec
       Paths_snailscheme
