--- a/snailscheme.cabal
+++ b/snailscheme.cabal
@@ -39,7 +39,8 @@ library
       LambdaCase
       OverloadedStrings
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , containers
     , megaparsec
     , mtl
@@ -59,7 +60,8 @@ executable snailscheme-exe
       OverloadedStrings
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , containers
     , megaparsec
     , mtl
